src/MudBlazor/wwwroot/MudBlazor.css
/* ... */
  .mud-input-control > .mud-input-label-outlined.mud-input-label-inputcontrol {
    line-height: 18px; }
  .mud-input-control > .mud-input-label-inputcontrol {
    color: var(--mud-palette-text-primary);
    padding: 0;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1;
    letter-spacing: 0.00938em;
    z-index: 0; }
    .mud-input-control > .mud-input-label-inputcontrol.mud-disabled {
      color: var(--mud-palette-text-disabled); }
    .mud-input-control > .mud-input-label-inputcontrol.mud-input-error {
      color: var(--mud-palette-error) !important; }
  .mud-input-control.mud-input-required > .mud-input-label::after {
    content: "*"; }

.mud-input-helper-text {
  color: var(--mud-palette-text-secondary);
  margin: 0;
  font-size: 0.75rem;
  margin-top: 3px;
  text-align: left;
  font-weight: 400;
  line-height: 1.66;
  letter-spacing: 0.03333em; }

.mud-input-helper-text.mud-disabled {
  color: var(--mud-palette-text-disabled); }

.mud-input-helper-text.mud-input-error {
  color: var(--mud-palette-error) !important; }

.mud-input-helper-text-margin-dense {
  margin-top: 4px; }

.mud-input-helper-text-contained {
  margin-left: 14px;
  margin-right: 14px; }

.mud-input-label {
  display: block;
  transform-origin: top left; }

.mud-input-label-inputcontrol {
  top: 0;
  left: 0;
  position: absolute;
  transform: translate(0, 24px) scale(1); }

.mud-input-label-margindense {
  transform: translate(0, 21px) scale(1); }

.mud-input-label-shrink {
  transform: translate(0, 1.5px) scale(0.75);
  transform-origin: top left; }

.mud-input-label-animated {
  transition: color 200ms cubic-bezier(0, 0, 0.2, 1) 0ms, transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms; }

.mud-input-label-filled {
  z-index: 1;
  transform: translate(12px, 20px) scale(1);
  pointer-events: none; }
  .mud-input-label-filled.mud-input-label-margin-dense {
    transform: translate(12px, 17px) scale(1); }

.mud-input-label-outlined {
  z-index: 20 !important;
  transform: translate(14px, 20px) scale(1);
  pointer-events: none;
  background-color: var(--mud-palette-surface);
  padding: 0px 5px !important; }
  .mud-input-label-outlined.mud-input-label-margin-dense {
    transform: translate(14px, 12px) scale(1); }

.mud-input:focus-within + label.mud-input-label.mud-input-label-inputcontrol {
  color: var(--mud-palette-primary);
  transform: translate(0, 1.5px) scale(0.75);
  transform-origin: top left; }
  .mud-input:focus-within + label.mud-input-label.mud-input-label-inputcontrol.mud-input-error {
    color: var(--mud-palette-error); }

.mud-input:focus-within + label.mud-input-label.mud-input-label-inputcontrol.mud-input-label-filled {
  transform: translate(12px, 10px) scale(0.75); }
  .mud-input:focus-within + label.mud-input-label.mud-input-label-inputcontrol.mud-input-label-filled.mud-input-label-margin-dense {
    transform: translate(12px, 7px) scale(0.75); }

.mud-input:focus-within + label.mud-input-label.mud-input-label-inputcontrol.mud-input-label-outlined {
  color: var(--mud-palette-primary);
  transform: translate(14px, -6px) scale(0.75); }

.mud-shrink + label.mud-input-label.mud-input-label-inputcontrol {
  color: var(--mud-palette-text-primary);
  transform: translate(0, 1.5px) scale(0.75);
  transform-origin: top left; }

.mud-shrink + label.mud-input-label.mud-input-label-inputcontrol.mud-input-label-filled {
  transform: translate(12px, 10px) scale(0.75); }
  .mud-shrink + label.mud-input-label.mud-input-label-inputcontrol.mud-input-label-filled.mud-input-label-margin-dense {
    transform: translate(12px, 7px) scale(0.75); }

.mud-shrink + label.mud-input-label.mud-input-label-inputcontrol.mud-input-label-outlined {
  color: var(--mud-palette-text-primary);
  transform: translate(14px, -6px) scale(0.75); }

.mud-overlay {
  top: 0;
  left: 0;
  margin: 0px !important;
  height: 100%;
  width: 100%;
  position: fixed;
  z-index: var(--mud-zindex-popover);
  background-color: transparent; }
  .mud-overlay.mud-animation {
    animation: mud-animation-fadein ease 0.15s;
    -webkit-animation: mud-animation-fadein ease 0.15s;
    -moz-animation: mud-animation-fadein ease 0.15s;
    -o-animation: mud-animation-fadein ease 0.15s; }
  .mud-overlay.mud-absolute {
    position: absolute; }
  .mud-overlay.mud-overlay-dialog {
    z-index: calc(var(--mud-zindex-dialog) + 1);
    background-color: rgba(0, 0, 0, 0.5); }

.d-flex {
  display: flex !important; }

.d-inline-flex {
  display: inline-flex !important; }

.flex-row {
  flex-direction: row !important; }

.flex-row-reverse {
  flex-direction: row-reverse !important; }

.flex-column {
  flex-direction: column !important; }

.flex-column-reverse {
  flex-direction: column-reverse !important; }

.flex-wrap {
  flex-wrap: wrap !important; }

.flex-nowrap {
  flex-wrap: nowrap !important; }

.flex-wrap-reverse {
  flex-wrap: wrap-reverse !important; }

.flex-fill {
  flex: 1 1 auto !important; }

.flex-grow-0 {
  flex-grow: 0 !important; }

.flex-grow-1 {
  flex-grow: 1 !important; }

.flex-shrink-0 {
  flex-shrink: 0 !important; }

.flex-shrink-1 {
  flex-shrink: 1 !important; }

.justify-start {
  justify-content: flex-start !important; }

.justify-end {
  justify-content: flex-end !important; }

.justify-center {
  justify-content: center !important; }

.justify-space-between {
  justify-content: space-between !important; }

.justify-space-around {
  justify-content: space-around !important; }

.align-start {
  align-items: flex-start !important; }

.align-end {
  align-items: flex-end !important; }

.align-center {
  align-items: center !important; }

.align-baseline {
  align-items: baseline !important; }

.align-stretch {
  align-items: stretch !important; }

.align-content-start {
  align-content: flex-start !important; }

.align-content-end {
  align-content: flex-end !important; }

.align-content-center {
  align-content: center !important; }

.align-content-space-between {
  align-content: space-between !important; }
/* ... */

